--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "beyondcode/laravel-websockets": "^1.13",
         "darryldecode/cart": "^4.2",
         "evryn/laravel-toman": "^2.0",
         "fruitcake/laravel-cors": "^2.0",
@@ -14,7 +15,9 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "*",
-        "nexmo/client": "^2.4"
+        "nexmo/client": "^2.4",
+        "predis/predis": "^2.0",
+        "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
